Avoid <picture> preloading when viewport not initialized.

On rare occasions, it seems that viewport dimensions are not properly
initialized before being passed to the HTMLPreloadScanner, which
results in potential preloading of the wrong <picture> based resource.

That issue will no longer be relevant once ParseHTMLOnMainThread
lands and MediaValuesCached related logic is removed from the
preloadScanner, but in the mean time, it's causing test flakiness.

This CL changes the preload scanner's behavior, so that it would avoid
preloading of picture based resources when the viewport dimensions
are unknown.

BUG=652513

Review-Url: https://codereview.chromium.org/2404463002
Cr-Commit-Position: refs/heads/master@{#424373}

Former-commit-id: 1ea50761e75c1752ec0bf619106bfa63f9372dae